core/roboconf-core/src/test/resources/configurations/valid/only-component-3.graph

tomcat {
	imports: port, db.ip;
	exports: ip, port = 8080;
	children: war;
	installer: puppet;
}

apache {
	imports: tomcat.port, tomcat.ip;
	exports: ip, port = 80;
	installer: puppet;
}

db {
	facets: db;
}
