core/roboconf-core/src/test/resources/configurations/invalid/graph-with-invalid-case-imports.graph
VM {
	installer: target;
	children: toto, MySql;
}

toto {
      installer: whatever;
      imports: MYSQL.*;
}

MySql {
       installer: whatever;
       exports: ip, port = 3306;
}
